fix dialog on mobile

--- a/sass/_dialog.sass
+++ b/sass/_dialog.sass
@@ -98,6 +98,8 @@
         width: 300px
         height: 500px
         flex-direction: column
+        &::-webkit-scrollbar
+            display: none
         img
             width: 250px
             height: 250px
